# sirilScripts

./: .gitignore  BuildCalibration.ssf  LRGB.ssf  LRGB_compose.ssf  LRGB_pre.ssf  README.md  SHO.ssf  SHO_compose.ssf  SHO_pre.ssf  pyproject.toml  run_job.py  settings.json  settings.template.json
.claude/: settings.local.json
.claude/commands/: prime.md  review.md
.claude/skills/code-review/: SKILL.md
docs/: architecture.md  code.md  lrgb_workflow.md  veralux.md
examples/: example_hoo_job.json  example_lrgb_hdr_job.json  example_lrgb_job.json  example_sho_job.json
jobs/: IC1396.json  IC2118.json  IC443.json  LDN1082.json  M31.json  M33.json  M42.json  M45.json  NGC2175.json  NGC4244.json  NGC7000.json  SH2-103.json  SH2-157_LRGB.json  SH2-157_LSHO.json  SH2-184.json  SH2-190.json  m31_stage1_deconv.json  m31_stage2_silentium.json  m31_stage3_full.json
siril_job_runner/: README.md  calibration.py  compose_broadband.py  compose_helpers.py  compose_narrowband.py  composition.py  config.py  fits_utils.py  frame_analysis.py  hdr.py  job_config.py  job_runner.py  job_schema.json  logger.py  models.py  preprocessing.py  preprocessing_pipeline.py  protocols.py  psf_analysis.py  sequence_analysis.py  siril_color.py  siril_wrapper.py  stretch_helpers.py  stretch_pipeline.py  veralux_revela.py  veralux_silentium.py  veralux_starcomposer.py  veralux_stretch.py
tests/: test_calibration.py  test_fits_utils.py  test_frame_analysis.py  test_hdr.py  test_job_config.py  test_logger.py  test_models.py  test_palettes.py  test_preprocessing_utils.py  test_psf_analysis.py  test_sequence.py  test_stack_discovery.py  test_veralux_revela.py  test_veralux_silentium.py
xisf_to_fits/: README.md  __init__.py  __main__.py  batch.py  cli.py  converter.py  models.py  pyproject.toml  xisf2fits.py
