[project]
name = "siril-job-runner"
version = "0.1.0"
description = "Automated Siril image processing pipeline with job file configuration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "jcdoll" }
]

dependencies = [
    "astropy>=6.0",
    "diptest>=0.8",
    "numpy>=1.24",
    "pysiril @ git+https://gitlab.com/free-astro/pysiril.git",
    "PyWavelets>=1.4",
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "tqdm>=4.67.1",
    "xisf>=0.9.5",
]

[project.optional-dependencies]
validation = [
    "jsonschema>=4.0",
]

[project.scripts]
run-job = "run_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["siril_job_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
