[project]
name = "xisf2fits"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "xisf>=0.9.0",
    "astropy>=5.0",
    "numpy>=1.21",
    "tqdm>=4.60",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]