[project]
name = "xisf2fits"
version = "2.0.0"
description = "Batch convert XISF files to FITS using Siril"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.60",
]
# Note: pysiril is required but comes bundled with Siril 1.2+
# It is not available on PyPI

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
